table overflow fix

--- a/src/components/HomeTab/HomeTab.module.css
+++ b/src/components/HomeTab/HomeTab.module.css
@@ -14,7 +14,7 @@
   border-radius: 16px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  height: 100vw;
+  height: 100%;
   /* padding: 1rem; */
   /* box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25); */
   /* background: linear-gradient(180deg, #355359 0%, #3b5d63 100%); */
